// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl delete credential throws on missing --project-id option 1`] = `
"refactrctl delete credential [credential-id]

Delete a runner

Positionals:
  credential-id  ID of the credential to deleted  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the credential  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl delete credential throws on missing arguments 1`] = `
"refactrctl delete credential [credential-id]

Delete a runner

Positionals:
  credential-id  ID of the credential to deleted  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the credential  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl delete job throws on missing --project-id option 1`] = `
"refactrctl delete job [job-id]

Delete a job

Positionals:
  job  ID of the job to delete  [string]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the job  [string] [required]
      --job-id  [default: read from stdin]

Missing required argument: project-id
"
`;

exports[`refactrctl delete job throws on missing arguments 1`] = `
"refactrctl delete job [job-id]

Delete a job

Positionals:
  job  ID of the job to delete  [string]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the job  [string] [required]
      --job-id  [default: read from stdin]

Missing required argument: project-id
"
`;

exports[`refactrctl delete pipeline throws on missing arguments 1`] = `
"refactrctl delete pipeline [pipeline-id]

Delete a pipeline

Positionals:
  pipeline-id  ID of the pipeline to delete  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the pipeline  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl delete project throws on missing arguments 1`] = `
"refactrctl delete project [project-id]

Delete a project

Positionals:
  project-id  ID of the project to delete  [string] [default: read from stdin]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]

Project ID must be provided
"
`;

exports[`refactrctl delete runner throws on missing arguments 1`] = `
"refactrctl delete runner [runner-id]

Delete a runner

Positionals:
  runner-id  ID of the runner to delete  [string] [default: read from stdin]

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter           Filter output using JsonPath  [string]
      --address          Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token       Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help             Show help  [boolean]
      --organization-id  ID of the organization containing the runner  [string] [required]

Missing required argument: organization-id
"
`;

exports[`refactrctl delete runner throws on missing organization-id option 1`] = `
"refactrctl delete runner [runner-id]

Delete a runner

Positionals:
  runner-id  ID of the runner to delete  [string] [default: read from stdin]

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter           Filter output using JsonPath  [string]
      --address          Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token       Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help             Show help  [boolean]
      --organization-id  ID of the organization containing the runner  [string] [required]

Missing required argument: organization-id
"
`;

exports[`refactrctl delete throws on missing subcommand 1`] = `
"refactrctl delete

Delete specified resource

Commands:
  refactrctl delete pipeline [pipeline-id]      Delete a pipeline
  refactrctl delete job [job-id]                Delete a job
  refactrctl delete project [project-id]        Delete a project
  refactrctl delete runner [runner-id]          Delete a runner
  refactrctl delete credential [credential-id]  Delete a runner

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Refactr API server  [string] [default: REFACTR_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: REFACTR_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]

Command must be specified.
"
`;
